# ticktown-transit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  temp.txt
app/: CMakeLists.txt  main.cpp
assets/: levels.json
scripts/: build_release.sh  run_coverage.sh  run_debug.sh  run_release.sh  run_test.sh
src/: CMakeLists.txt
src/core/graph/: Edge.hpp  Graph.cpp  Graph.hpp  Line.hpp  Passenger.hpp  SimulationSnapshot.hpp  Station.hpp  StationType.hpp  Train.hpp  id.hpp  passenger_state_machine.cpp  passenger_state_machine.hpp  route_info.hpp  routing_cache.cpp  routing_cache.hpp  train_state_machine.cpp  train_state_machine.hpp
src/core/simulation/: Level.cpp  Level.hpp  LevelRegistry.cpp  LevelRegistry.hpp  Simulation.cpp  Simulation.hpp  SimulationCommand.hpp  SimulationSnapshot.hpp  TickClock.cpp  TickClock.hpp
src/core/ui/: DrawSnapshot.cpp  RaylibApp.hpp
src/core/utils/: LevelLoader.cpp  LevelLoader.hpp  utils.cpp  utils.hpp
src/core/world/: Polyline.hpp  World.cpp  World.hpp  WorldGeometry.cpp  WorldGeometry.hpp  WorldSnapshot.hpp
src/ui/: AppState.hpp  DrawSnapshot.cpp  DrawSnapshot.hpp  RaylibApp.cpp  RaylibApp.hpp  Screen.hpp  World.hpp  constants.hpp
src/ui/screens/: InGame.cpp  InGame.hpp  LevelSelect.cpp  LevelSelect.hpp  MainMenu.cpp  MainMenu.hpp  PauseMenu.cpp  PauseMenu.hpp
src/ui/widgets/: Button.cpp  Button.hpp  Station.cpp  Station.hpp
tests/: CMakeLists.txt  determinism_tests.cpp  graph_tests.cpp  passenger_heutristic.cpp  passenger_test.cpp  route_test.cpp  routing_cache.cpp  train_simulation_test.cpp  transfer_test.cpp
